--- a/Game/CMakeLists.txt
+++ b/Game/CMakeLists.txt
@@ -4,8 +4,17 @@ file(GLOB GAME_SRC
     "src/*.cpp"
 )
 
-file(GLOB_RECURSE GAME_INC 
+file(GLOB_RECURSE GAME_INC
 	"include/*.h")
+
+if (WIN32)
+  set(EXPORT "__declspec(dllexport)")
+ELSE()
+  set(EXPORT "")
+ENDIF()
+
+
+message("Game Include Path ${GAME_INC_PATH}")
 
 add_library(Game ${GAME_SRC} ${GAME_INC})
 
@@ -13,7 +22,3 @@ if(SDL2_FOUND)
   include_directories(${SDL2_INCLUDE_DIR})
   target_link_libraries(Game ${SDL_LIBRARIES})
 endif(SDL2_FOUND)
-
-
-
-
