Made some changes to deal with DLLs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,17 +19,13 @@ if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
     endif ()
 elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
-else ()
+elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+else()
     message(FATAL_ERROR "Your C++ compiler does not support C++11.")
 endif ()
 
 set(GAME_INC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Game/include)
-
-if (WIN32)
-  add_definitions(-DEXPORT="__declspec(dllexport)")
-else()
-  add_definitions(-DEXPORT="")
-endif()
 
 Add_SubDirectory(Game)
 Add_SubDirectory(OpenGLRenderer)
